Initialize Swift Package Manager.

--- a/.gitignore
+++ b/.gitignore
@@ -38,13 +38,13 @@ playground.xcworkspace
 # Packages/
 # Package.pins
 .build/
+Package.resolved
 
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
 Pods/
 *.xcworkspace/
 
@@ -52,7 +52,6 @@ Pods/
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
-
 Carthage/Build
 
 # fastlane
@@ -61,7 +60,6 @@ Carthage/Build
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/#source-control
-
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
