--- a/BoxKitExample/Podfile
+++ b/BoxKitExample/Podfile
@@ -3,6 +3,6 @@ platform :ios, '12.0'
 use_frameworks!
 
 target 'BoxKitExample' do
-  pod 'BoxKit', :path => './'
+  pod 'BoxKit', :path => '../'
 end
 
