NSAttributedString. Getter/Setter 구조로 변경,

--- a/PodDevelopment/Podfile
+++ b/PodDevelopment/Podfile
@@ -2,7 +2,7 @@ platform :ios, '12.0'
 
 use_frameworks!
 
-target 'BoxKitExample' do
+target 'PodDevelopment' do
   pod 'BoxKit', :path => '../'
 end
 
