--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ Package.resolved
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 Pods/
 *.xcworkspace/
+Podfile.lock
 
 # Carthage
 #
