--- a/UIKitSample/Podfile
+++ b/UIKitSample/Podfile
@@ -2,7 +2,7 @@ platform :ios, '12.0'
 
 use_frameworks!
 
-target 'PodDevelopment' do
+target 'UIKitSample' do
   pod 'BoxKit', :path => '../'
 end
 
